# TRACE

./: .gitignore  AGENTS.md  AGENTS_v5.md  BUILD_SEQUENCE_PLAN_v2.md  BUILD_SEQUENCE_PLAN_v3.md  Cargo.toml  FRONTEND_PLAN_v3.md  FRONTEND_PLAN_v4.md  FRONTEND_PLAN_v5.md  PREBUG_CHECKLIST_v1.md  README.md  SMOKETEST_EVAL_PLAN_v1.md  SMOKETEST_EVAL_PLAN_v2.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
archive/phase0_docs/: AGENTS_v6.md  PHASE0_FINALE_PLAN_v1.md
archive/plan_refresh_2026-02-28/: 00_INDEX.md  01_BUILD_SEQUENCE_PLAN_v2.md  02_SMOKETEST_EVAL_PLAN_v1.md
crates/trace-api-types/: Cargo.toml
crates/trace-api-types/src/: lib.rs
crates/trace-cli/: Cargo.toml
crates/trace-cli/src/: main.rs
crates/trace-events/: Cargo.toml
crates/trace-events/src/: lib.rs
crates/trace-lease/: Cargo.toml
crates/trace-lease/src/: lib.rs
crates/trace-normalizer/: Cargo.toml
crates/trace-normalizer/src/: lib.rs
crates/trace-server/: Cargo.toml
crates/trace-server/src/: lib.rs  main.rs
crates/trace-store/: Cargo.toml
crates/trace-store/src/: lib.rs
docs/: JJ_MULTIAGENT_WORKFLOW.md  LINUX_BUILD_HUMAN.md  PHASE0_HUMAN_QA.md  PHASE0_SIGNOFF.md  SETUP.md
scripts/: trace-jj.sh  trace-lane-shell.sh  trace-smoke-tmux.sh
web/: index.html  package.json  playwright.config.ts
web/src/: App.tsx  api.ts  contracts.ts  guards.test.ts  guards.ts  styles.css
web/tests/: jj-workflow.spec.ts  phase0-auth-remediation.spec.ts  phase0-smoke-preflight-errors.spec.ts  phase0-smoke.spec.ts  tmux-workspace.spec.ts
