[package]
name = "trace-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
trace-api-types = { path = "../trace-api-types" }
trace-events = { path = "../trace-events" }
trace-lease = { path = "../trace-lease" }
trace-normalizer = { path = "../trace-normalizer" }
trace-store = { path = "../trace-store" }

[dev-dependencies]
serde_json.workspace = true
tower.workspace = true

[lints]
workspace = true
